--- a/MySbbInfo/App.xaml
+++ b/MySbbInfo/App.xaml
@@ -1,10 +1,13 @@
 ﻿<Application x:Class="MySbbInfo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainView.xaml">
+             xmlns:local="clr-namespace:MySbbInfo">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:AppBootstrapper x:Key="Bootstrapper" />
+                </ResourceDictionary>
                 <ResourceDictionary Source="Themes\Skins\WhistlerBlue.xaml" />
                 <ResourceDictionary Source="Themes\MySbbInfoStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
