--- a/MySbbInfo/SearchStation/SearchStationView.xaml
+++ b/MySbbInfo/SearchStation/SearchStationView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MySbbInfo.SearchStation.SearchStation"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
@@ -45,10 +46,8 @@
                     Grid.Column="1"
                     Height="30"
                     Margin="0, 10"
-                    Command="{Binding SearchStationCommand}"
-                    CommandParameter="{Binding ElementName=txtStationQuery,
-                                               Path=Text}"
-                    Content="{lex:Loc SearchStation}" />
+                    Content="{lex:Loc SearchStation}"
+                    cal:Message.Attach="[Event Click] = [Action SearchStation(txtStationQuery.Text)]" />
 
             <ListView Grid.Row="2"
                       Grid.ColumnSpan="2"
