--- a/MySbbInfo/SearchStation/SearchStationView.xaml
+++ b/MySbbInfo/SearchStation/SearchStationView.xaml
@@ -14,8 +14,7 @@
              mc:Ignorable="d">
 
     <xctk:BusyIndicator x:Name="BusySearch"
-                        BusyContent="{lex:Loc SearchingStation}"
-                        IsBusy="{Binding IsBusy}">
+                        BusyContent="{lex:Loc SearchingStation}">
         <Grid>
             <Grid.Resources>
                 <Style TargetType="{x:Type Label}">
