--- a/MySbbInfo/StationTimeTable/StationTimeTableView.xaml
+++ b/MySbbInfo/StationTimeTable/StationTimeTableView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MySbbInfo.StationTimeTable.StationTimeTableView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -48,9 +49,7 @@
                     Grid.ColumnSpan="4"
                     Height="30"
                     Margin="0, 10"
-                    Command="{Binding LoadStationBoardCommand}"
-                    CommandParameter="{Binding ElementName=txtStation,
-                                               Path=Text}"
+                    cal:Message.Attach="[Event Click] = [Action Search(txtStation.Text)]"
                     Content="{lex:Loc LoadStationTimeTable}" />
 
             <ListView Grid.Row="2"
