--- a/MySbbInfo/TimeTable/Search/TimeTableSearchView.xaml
+++ b/MySbbInfo/TimeTable/Search/TimeTableSearchView.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="MySbbInfo.TimeTable.Search.TimeTableSearchView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
@@ -40,8 +41,7 @@
                 Grid.Column="1"
                 Height="30"
                 Margin="0, 10"
-                Command="{Binding SearchConnectionsCommand}"
-                CommandParameter="{Binding SearchParameter}"
+                cal:Message.Attach="[Event Click] = [Action SearchStation()]" 
                 Content="{lex:Loc Translation:SearchForConnection}" />
 
     </Grid>
