--- a/MySbbInfo/TimeTable/Search/TimeTableSearchView.xaml
+++ b/MySbbInfo/TimeTable/Search/TimeTableSearchView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="MySbbInfo.TimeTable.Search.TimeTableSearchView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:cal="http://www.caliburnproject.org"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -25,13 +25,13 @@
         </Grid.ColumnDefinitions>
 
         <Label Content="{lex:Loc From}" />
-        <Label Grid.Row="1" Content="{lex:Loc To}" />
-        <Label Grid.Row="2" Content="{lex:Loc Time}" />
-
         <TextBox Grid.Column="1" Text="{Binding SearchParameter.From}" />
+        <Label Grid.Row="1" Content="{lex:Loc To}" />
         <TextBox Grid.Row="1"
                  Grid.Column="1"
                  Text="{Binding SearchParameter.To}" />
+        <Label Grid.Row="2" Content="{lex:Loc Time}" />
+
         <search:TimeSelectorControl Grid.Row="2"
                                     Grid.Column="1"
                                     SelectedDateTime="{Binding SearchParameter.DepartureTime,
@@ -41,8 +41,8 @@
                 Grid.Column="1"
                 Height="30"
                 Margin="0, 10"
-                cal:Message.Attach="[Event Click] = [Action SearchStation()]" 
-                Content="{lex:Loc Translation:SearchForConnection}" />
+                Content="{lex:Loc Translation:SearchForConnection}"
+                cal:Message.Attach="[Event Click] = [Action SearchStation()]" />
 
     </Grid>
 </UserControl>
