--- a/MySbbInfo/TimeTable/Connections/ConnectionsView.xaml
+++ b/MySbbInfo/TimeTable/Connections/ConnectionsView.xaml
@@ -6,26 +6,44 @@
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:local="clr-namespace:MySbbInfo.TimeTable.Connections"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:sections="clr-namespace:MySbbInfo.TimeTable.Connections.Sections"
              d:DataContext="{d:DesignInstance local:ConnectionsViewModel}"
              d:DesignHeight="600"
              d:DesignWidth="300"
              lex:ResxLocalizationProvider.DefaultAssembly="MySbbInfo"
              lex:ResxLocalizationProvider.DefaultDictionary="Translation"
              mc:Ignorable="d">
-
+    <UserControl.Resources>
+        <local:OccupancyToBitmapImageConverter x:Key="OccupancyConverter" />
+    </UserControl.Resources>
     <DockPanel>
-        <!--  Displays all connections within the conductor  -->
-        <ItemsControl DockPanel.Dock="Top" ItemsSource="{Binding Connections}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <ContentControl cal:View.Model="{Binding}" />
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-        <!--
-            Displays the sections of a connection.
-            Caliburn.Micro matches the associated view with the view model automatically
-        -->
-        <ContentControl DockPanel.Dock="Top" cal:View.Model="{Binding Sections}" />
+
+        <!--  TODO: Rewrite the XAML code according to the code snipped in your workshop paper  -->
+
+        <DataGrid Height="140"
+                  Margin="0,2,0,-2"
+                  AutoGenerateColumns="False"
+                  CanUserReorderColumns="False"
+                  DockPanel.Dock="Top"
+                  IsReadOnly="True"
+                  ItemsSource="{Binding Connections}"
+                  SelectedItem="{Binding SelectedConnection}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Path=DepartingStationName}" Header="{lex:Loc MySbbInfo:Translation:Start}" />
+                <DataGridTextColumn Binding="{Binding Path=DepartureDateTime, StringFormat=dd.MM.yy HH:mm}" />
+                <DataGridTextColumn Binding="{Binding Path=ArrivingStationName}" Header="{lex:Loc MySbbInfo:Translation:Destination}" />
+                <DataGridTextColumn Binding="{Binding Path=ArrivalDateTime, StringFormat=dd.MM.yy HH:mm}" />
+                <DataGridTextColumn Binding="{Binding Path=JourneyDuration, StringFormat=hh\\:mm}" Header="{lex:Loc MySbbInfo:Translation:Duration}" />
+                <DataGridTemplateColumn Header="{lex:Loc MySbbInfo:Translation:Occupancy}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding Path=Capacity2ndCompartment, Converter={StaticResource OccupancyConverter}}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <sections:SectionsView DataContext="{Binding Sections}" DockPanel.Dock="Top" />
     </DockPanel>
 </UserControl>
